--- a/client/src/sass/main.scss
+++ b/client/src/sass/main.scss
@@ -1,19 +1,20 @@
-@import "abstracts/variables";
-@import "abstracts/mixins";
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
 
-@import "base/base";
-@import "base/typography";
-@import "base/utilities";
+@import 'base/base';
+@import 'base/typography';
+@import 'base/utilities';
 
-@import "layout/header";
-@import "layout/footer";
-@import "layout/navigation";
-@import "layout/navigation";
+@import 'layout/header';
+@import 'layout/footer';
+@import 'layout/navigation';
+@import 'layout/navigation';
 
-@import "components/landing";
-@import "components/contact";
-@import "components/signform";
-@import "components/about";
-@import "components/menu";
-@import "components/details";
-@import "components/cart";
+@import 'components/landing';
+@import 'components/contact';
+@import 'components/signform';
+@import 'components/about';
+@import 'components/menu';
+@import 'components/details';
+@import 'components/cart';
+@import 'components/login';
